--- a/views/author.ejs
+++ b/views/author.ejs
@@ -4,7 +4,7 @@
     This Web Site has been created by me.
 </p>
 
-<img src="/images/avatar.jpg" width="340" />
+<img src="/images/avatar.JPG" width="340" />
 
 <hr />
 
