--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -11,6 +11,7 @@
 
             <li>
                 <%= tip.text %>
+                <small> (by <%= tip.TipAuthor ? tip.TipAuthor.username : "Anonymous" %>) </small>
 
                 <% if (!accepted && (isAdmin || isQuizAuthor)) { %>
 
