--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -5,6 +5,7 @@
 
         <% var accepted = tip.accepted; %>
         <% var isAdmin = session.user && session.user.isAdmin; %>
+        <% var isTipAuthor = session.user && tip.authorId === session.user.id; %>
         <% var isQuizAuthor = session.user && quizAuthorId && quizAuthorId === session.user.id; %>
 
         <% if (accepted || isAdmin || isQuizAuthor) { %>
@@ -17,6 +18,14 @@
 
                     <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/accept?_method=PUT">
                         <button>Accept</button>
+                    </a>
+
+                <% } %>
+
+                <% if (isAdmin || isTipAuthor) { %>
+
+                    <a href="/quizzes/<%= quiz.id %>/tips/<%= tip.id%>/edit">
+                        <button>Edit</button>
                     </a>
 
                 <% } %>
